welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: T is already defined as variable T
	var T:Array[Color]; var T = new Array[Color](8);
                                ^Array1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var T:Array[Color]; var T = new Array[Color](8);
            ^Array1:22: error: class Array takes type parameters
def reproduireMotif (T:Array, j:Int) {
                       ^Array1:12: error: not found: value T
	for (i <- 0 to T.length-1) {
                       ^